--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+0.4.2
+----
+  * default IDs are strings, not integers, since RPX supports both
+  * Added username field to standart parameters
+
 0.4
 ----
   * The RPXNow.api_version= can be set globally
