--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.6.13
+------
+ * return an indifferent hash from user_data when possible
+
 0.6.12
 -----
  * url encode obstrusive popup code token-url
